--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<div class="hero overlay">
 
 		<div class="img-bg rellax">
-			<img src="images/hero_1.jpg" alt="Image" class="img-fluid">
+			<img src="https://images.unsplash.com/photo-1533473359331-0135ef1b58bf?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image" class="img-fluid">
 		</div>
 
 		<div class="container">
@@ -148,8 +148,7 @@
 				<div class="col-lg-3 mb-4 mb-lg-0">
 					<div class="heading-content" data-aos="fade-up">
 						<h2>Servislerimiz</span></h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p class="my-4" data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary">View All</a></p>
+					
 					</div>
 				</div>
 				<div class="col-lg-9">
@@ -316,7 +315,6 @@
 
 
 
-
 	<div class="section">
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
@@ -400,7 +398,11 @@
 				<div class="col-lg-4">
 					<div class="widget">
 						<h3>Samsunppfcenter Hakkımızda<span class="text-primary">.</span> </h3>
-						<p>Hakkımızda Yazısı.</p>
+						<p>2010 Yılından bu yana Otomotiv sektörü içinde yer alan firmamız, 2019
+						yılından itibaren Araç Kaplama merkezi olarak da faaliyet göstermektedir.
+						<br><br>
+						2023 Yılı sonlarına doğru ciddi AR-GE çalışmaları ile Dünya Markası olaran STEK ve LUUMAR Markalarının Samsun Yetkili
+						Uygulama Merkezi olarak müşterilerimize hizmet vermeye başladık.</p>
 					</div> <!-- /.widget -->
 					<div class="widget">
 						<h3>Takip Edin</h3>
@@ -433,14 +435,9 @@
 			</div> <!-- /.row -->
 			<iframe
 				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6237210.07129742!2d26.98879931183617!3d40.24213506411478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4087d881047c17f9%3A0x3fc5fcf337dcf39e!2zS2F6xLFtIEthcmFiZWtpciwgxZ5odC4gRmVyaXQgU2suIE5vOjMxLCA1NTA3MCDEsGxrYWTEsW0vU2Ftc3Vu!5e0!3m2!1str!2str!4v1720117526515!5m2!1str!2str"
-				width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+				width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
 				referrerpolicy="no-referrer-when-downgrade"></iframe>
-			<div class="row mt-5">
-				<div class="col-12 text-center">
-					<p class="mb-0">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> <!-- License information: https://untree.co/license/ -->
-					</p>
-				</div>
-			</div> <!-- /.container -->
+		
 		</div> <!-- /.site-footer -->
 
 		<!-- Preloader -->
