--- a/index.html
+++ b/index.html
@@ -44,26 +44,26 @@
 		<div class="site-mobile-menu-body"></div>
 	</div>
 
-	<nav class="site-nav mt-3">
+	<nav class="site-nav ">
 		<div class="container">
 
-			<div class="site-navigation">
-				<div class="row">
+			<div class="site-navigation" >
+				<div class="row" >
 					<div class="col-6 col-lg-3">
 						<a href="index.html" class="logo m-0 float-start">Samsunppfcenter</a>
 					</div>
 					<div class="col-lg-6 d-none d-lg-inline-block text-center nav-center-wrap">
 						<ul class="js-clone-nav  text-center site-menu p-0 m-0">
 							<li class="active"><a href="index.html">Ana Sayfa</a></li>
-							<li><a href="asbout.html">Hakkımızda</a></li>
+							<li><a href="hakkimizda.html">Hakkımızda</a></li>
 
-							<li><a href="bslog.html">İletişim</a></li>
+							<li><a href="iletisim.html">İletişim</a></li>
 
 						</ul>
 					</div>
 					<div class="col-6 col-lg-3 text-lg-end">
 						<ul class="js-clone-nav d-none d-lg-inline-block text-end site-menu ">
-							<li class="cta-button"><a href="constact.html">Bize Ulaşın</a></li>
+							<li class="cta-button"><a href="https://api.whatsapp.com/send/?phone=905072405155&amp;text&amp;type=phone_number&amp;app_absent=0">Bize Ulaşın</a></li>
 						</ul>
 
 						<a href="#" class="burger ms-auto float-end site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse" data-target="#main-navbar">
@@ -132,7 +132,7 @@
 						<p data-aos="fade-up" data-aos-delay="300">Mimari projeniz için en uygun cam filmi ihtiyacınızı size danışmanlık yaparak sağlıyoruz. Bunun için ücretsiz keşif ve
 						destek talebi alabilirsiniz.</p>
 
-						<p class="my-4" data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary">İncele</a></p>
+						<p class="my-4" data-aos="fade-up" data-aos-delay="300"><a href="https://api.whatsapp.com/send/?phone=905072405155&amp;text&amp;type=phone_number&amp;app_absent=0" class="btn btn-primary">Bize Ulaşın</a></p>
 					</div>
 				</div>
 				
