LUUMAR TEXT CONVERT TO LLUMAR

--- a/dynoshield.html
+++ b/dynoshield.html
@@ -155,7 +155,7 @@
 						<p>2010 Yılından bu yana Otomotiv sektörü içinde yer alan firmamız, 2019
 						yılından itibaren Araç Kaplama merkezi olarak da faaliyet göstermektedir.
 						<br><br>
-						2023 Yılı sonlarına doğru ciddi AR-GE çalışmaları ile Dünya Markası olaran STEK ve LUUMAR Markalarının Samsun Yetkili
+						2023 Yılı sonlarına doğru ciddi AR-GE çalışmaları ile Dünya Markası olaran STEK ve LLUMAR Markalarının Samsun Yetkili
 						Uygulama Merkezi olarak müşterilerimize hizmet vermeye başladık.</p>
 					</div> <!-- /.widget -->
 					<div class="widget">
