--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row" >
 					<div class="col-lg-3">
 						<div class="service-2 left-0 mb-5">
 							<img src="https://images.squarespace-cdn.com/content/v1/5f8e7d56091e7e1539ccdce9/1605272475250-N17IYOFHSZOZX7R9V966/Untitled-DFGH.jpg?format=2500w" alt="Image" class="img-fluid mb-4 rounded">
@@ -508,7 +508,7 @@
 				<span class="visually-hidden">Loading...</span>
 			</div>
 		</div>
-
+		
 
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/tiny-slider.js"></script>
@@ -519,5 +519,10 @@
 		<script src="js/flatpickr.js"></script>
 		<script src="js/glightbox.min.js"></script>
 		<script src="js/custom.js"></script>
-	</body>
+	<div class="col-12 text-center">
+			<p class="mb-0">Copyright &copy;
+				<script>document.write(new Date().getFullYear());</script>. Tüm Hakları Saklıdır. &mdash; 
+				<a href="https://condiamedia.com">condiamedia.com</a> Tarafından yapılmıştır. <!-- License information: https://untree.co/license/ -->
+			</p>
+		</div></body>
 	</html>
