--- a/services.html
+++ b/services.html
@@ -448,5 +448,10 @@
 		<script src="js/flatpickr.js"></script>
 		<script src="js/glightbox.min.js"></script>
 		<script src="js/custom.js"></script>
-	</body>
+	<div class="col-12 text-center">
+			<p class="mb-0">Copyright &copy;
+				<script>document.write(new Date().getFullYear());</script>. Tüm Hakları Saklıdır. &mdash; 
+				<a href="https://condiamedia.com">condiamedia.com</a> Tarafından yapılmıştır. <!-- License information: https://untree.co/license/ -->
+			</p>
+		</div></body>
 	</html>
