--- a/css/index.html
+++ b/css/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 	
-</body>
+<div class="col-12 text-center">
+			<p class="mb-0">Copyright &copy;
+				<script>document.write(new Date().getFullYear());</script>. Tüm Hakları Saklıdır. &mdash; 
+				<a href="https://condiamedia.com">condiamedia.com</a> Tarafından yapılmıştır. <!-- License information: https://untree.co/license/ -->
+			</p>
+		</div></body>
 </html>
