deleting unnecessary files and gtag.js added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
 	<link rel="stylesheet" href="css/glightbox.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WBZGQ9RZZ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-WBZGQ9RZZ2');
+</script>
 	<title>Samsunppfcenter</title>
 </head>
 <body>
