--- a/iletisim.html
+++ b/iletisim.html
@@ -29,7 +29,13 @@
 	<link rel="stylesheet" href="css/flatpickr.min.css">
 	<link rel="stylesheet" href="css/glightbox.min.css">
 	<link rel="stylesheet" href="css/style.css">
-
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+	  
+		gtag('config', 'G-WBZGQ9RZZ2');
+	  </script>
 
 	<title>Samsunppfcenter</title>
 </head>
