--- a/dynolite.html
+++ b/dynolite.html
@@ -206,7 +206,7 @@
 				<div class="col-lg-3">
 					<div class="widget">
 						<h3>İletişim</h3>
-						<address>Şht. Ferit Sk. No:31, Kazım Karabekir, 55070 İlkadım/Samsun</address>
+						<address>Adalet, Karadeniz Cd. No:27/1, 55070 İlkadım/Samsun, Samsun 55070</address>
 						<ul class="list-unstyled links mb-4">
 							<li><a href="tel:+905072405155">0507 240 51 55</a></li>
 						
@@ -217,7 +217,7 @@
 
 			</div> <!-- /.row -->
 			<iframe
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6237210.07129742!2d26.98879931183617!3d40.24213506411478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4087d881047c17f9%3A0x3fc5fcf337dcf39e!2zS2F6xLFtIEthcmFiZWtpciwgxZ5odC4gRmVyaXQgU2suIE5vOjMxLCA1NTA3MCDEsGxrYWTEsW0vU2Ftc3Vu!5e0!3m2!1str!2str!4v1720117526515!5m2!1str!2str"
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2998.6770034725164!2d36.34011217657333!3d41.27236810312092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4088762ee31641e7%3A0xb1f2817236136319!2sAdalet%2C%20Karadeniz%20Cd.%20No%3A27%20D%3A1%2C%2055060%20%C4%B0lkad%C4%B1m%2FSamsun!5e0!3m2!1str!2str!4v1745248756455!5m2!1str!2str"
 				width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
 				referrerpolicy="no-referrer-when-downgrade"></iframe>
 		
